examples/bad/wrong_returns.mtch
int main() {
    int example_var;
    example_var = (5 + 3) / 4;
    print(example_var);
    fun [(int, int) -> int] g = \(int a, int b) -> int => {return a + b;};

    return 0;
    return "";
}